# PromptFoundry

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
benchmarks/: README.md
config/: benchmark.baseline.yaml  benchmark.mvp3.yaml  config.example.yaml
docs/: ARCHITECTURE.md  CONFIGURATION.md  DOCUMENTATION.md  IMPLEMENTATION_PLAN.md  REQUIREMENTS.md  TASKS.md
examples/: ambiguous_intent_routing_task.yaml  arithmetic_task.yaml  extraction_task.yaml  hierarchical_intent_task.yaml  json_formatting_task.yaml  long_context_extraction_task.yaml  multilingual_incident_extraction_task.yaml  multilingual_routing_task.yaml  schema_extraction_task.yaml  sentiment_task.yaml  tool_action_schema_task.yaml  word_problems_task.yaml
scripts/: run_benchmarks.py  test_llm_connection.py
src/promptfoundry/: __init__.py  __main__.py  cli.py
src/promptfoundry/core/: __init__.py  benchmark_gate.py  config.py  diagnostics.py  history.py  optimizer.py  population.py  prompt.py  protocols.py  task.py
src/promptfoundry/evaluators/: __init__.py  accuracy.py  base.py  custom.py  format.py  normalization.py  pipeline.py  proxy_metrics.py
src/promptfoundry/llm/: __init__.py  base.py  config.py  openai_compat.py  rate_limiter.py
src/promptfoundry/strategies/: __init__.py  ablation.py  base.py  diversity.py  evolutionary.py  schedules.py  semantic_mutations.py
tests/: conftest.py  test_ablation.py  test_benchmark_gate.py  test_cli.py  test_core.py  test_diagnostics.py  test_diversity.py  test_evaluators.py  test_llm.py  test_optimizer.py  test_pipeline.py  test_proxy_metrics.py  test_runtime_config.py  test_schedules.py  test_semantic_mutations.py  test_strategies.py  test_task_contracts.py
